[gd_scene load_steps=12 format=3 uid="uid://o3mjmew4gp7l"]

[ext_resource type="Theme" uid="uid://ctvo3yacafgri" path="res://assets/teemat/menuTeema.tres" id="1_jgq60"]
[ext_resource type="Script" path="res://menut/pause_menu.gd" id="1_wxv4d"]
[ext_resource type="Texture2D" uid="uid://cuturptyth3bk" path="res://assets/graphics/SBREADITlogo.png" id="3_sriwc"]
[ext_resource type="Texture2D" uid="uid://y2tmbn106gb8" path="res://assets/placeholder/mutet.png" id="4_3sjr5"]
[ext_resource type="AudioStream" uid="uid://ffnax0o6akvs" path="res://assets/sounds/click.wav" id="5_3o6y8"]
[ext_resource type="Script" path="res://menut/Options.gd" id="5_o533t"]

[sub_resource type="Theme" id="Theme_fgpe8"]
default_font_size = 100

[sub_resource type="Theme" id="Theme_clv3f"]
default_font_size = 100

[sub_resource type="AtlasTexture" id="AtlasTexture_x7ihh"]
atlas = ExtResource("4_3sjr5")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4vxu"]
atlas = ExtResource("4_3sjr5")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_7yygd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7ihh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4vxu")
}],
"loop": true,
"name": &"mute",
"speed": 5.0
}]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_wxv4d")

[node name="Pause" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="Pause"]
layout_mode = 0
offset_left = 760.0
offset_top = 400.0
offset_right = 1160.0
offset_bottom = 850.0

[node name="VBoxContainer" type="VBoxContainer" parent="Pause/MarginContainer"]
layout_mode = 2
theme = SubResource("Theme_fgpe8")

[node name="Resume" type="Button" parent="Pause/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_jgq60")
text = "Resume"

[node name="Restart" type="Button" parent="Pause/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_jgq60")
text = "Restart"

[node name="Options" type="Button" parent="Pause/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_jgq60")
text = "Options
"

[node name="Quit" type="Button" parent="Pause/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_jgq60")
text = "Quit
"

[node name="Otsikko" type="Sprite2D" parent="Pause"]
position = Vector2(960, 200)
texture = ExtResource("3_sriwc")

[node name="Options" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_o533t")

[node name="MarginContainer" type="MarginContainer" parent="Options"]
layout_mode = 0
offset_left = 835.0
offset_top = 365.0
offset_right = 1085.0
offset_bottom = 689.0
theme = SubResource("Theme_clv3f")

[node name="VBoxContainer" type="VBoxContainer" parent="Options/MarginContainer"]
layout_mode = 2

[node name="Mutemusic" type="Button" parent="Options/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_jgq60")
theme_override_font_sizes/font_size = 50
text = "Mute music"

[node name="Mutesound" type="Button" parent="Options/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_jgq60")
theme_override_font_sizes/font_size = 50
text = "Mute sound"

[node name="Back" type="Button" parent="Options/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_jgq60")
text = "Back"

[node name="mutemusic" type="AnimatedSprite2D" parent="Options"]
position = Vector2(1140, 400)
sprite_frames = SubResource("SpriteFrames_7yygd")
animation = &"mute"

[node name="mutesound" type="AnimatedSprite2D" parent="Options"]
position = Vector2(1140, 500)
sprite_frames = SubResource("SpriteFrames_7yygd")
animation = &"mute"

[node name="buttonsound" type="AudioStreamPlayer" parent="Options"]
stream = ExtResource("5_3o6y8")
bus = &"sound"

[node name="buttonsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_3o6y8")
bus = &"sound"

[connection signal="pressed" from="Pause/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Pause/MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Pause/MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Pause/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Options/MarginContainer/VBoxContainer/Mutemusic" to="Options" method="_on_mutemusic_pressed"]
[connection signal="pressed" from="Options/MarginContainer/VBoxContainer/Mutesound" to="Options" method="_on_mutesound_pressed"]
[connection signal="pressed" from="Options/MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
